# langextract-llamacpp

./: Makefile  README.md  pyproject.toml  test_plugin.py
examples/: usage_example.ipynb  usage_example_file.ipynb  usage_example_server.ipynb
langextract_llamacpp/: __init__.py  provider.py
